# bazel-go-node-test

./: .gitignore  BUILD.bazel  README.md  WORKSPACE.bazel
bazel-bazel-test/bazel-out/: stable-status.txt  volatile-status.txt
go/apps/core/: BUILD.bazel
go/services/core/: main.go
