workspace(name = "com_github_n00pper_bazel_go_node_test")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

### Go

http_archive(
	name = "io_bazel_rules_go",
	sha256 = "16e9fca53ed6bd4ff4ad76facc9b7b651a89db1689a2877d6fd7b82aa824e366",
	urls = [
			"https://mirror.bazel.build/github.com/bazelbuild/rules_go/releases/download/v0.34.0/rules_go-v0.34.0.zip",
			"https://github.com/bazelbuild/rules_go/releases/download/v0.34.0/rules_go-v0.34.0.zip",
	],
)

http_archive(
	name = "bazel_gazelle",
	sha256 = "501deb3d5695ab658e82f6f6f549ba681ea3ca2a5fb7911154b5aa45596183fa",
	urls = [
		"https://mirror.bazel.build/github.com/bazelbuild/bazel-gazelle/releases/download/v0.26.0/bazel-gazelle-v0.26.0.tar.gz",
		"https://github.com/bazelbuild/bazel-gazelle/releases/download/v0.26.0/bazel-gazelle-v0.26.0.tar.gz",
	],
)


load("@io_bazel_rules_go//go:deps.bzl", "go_register_toolchains", "go_rules_dependencies")
load("@bazel_gazelle//:deps.bzl", "gazelle_dependencies", "go_repository")

############################################################
# Define your own dependencies here using go_repository.
# Else, dependencies declared by rules_go/gazelle will be used.
# The first declaration of an external repository "wins".
############################################################

go_repository(
	name = "org_golang_x_mod",
	importpath = "golang.org/x/mod",
	sum = "h1:kQgndtyPBW/JIYERgdxfwMYh3AVStj88WQTlNDi2a+o=",
	version = "v0.6.0-dev.0.20220106191415-9b9b3d81d5e3",
	build_external = "external",
)

go_rules_dependencies()

go_register_toolchains(version = "1.18.4")

gazelle_dependencies(go_repository_default_config = "//:WORKSPACE.bazel")