load("@io_bazel_rules_go//go:def.bzl", "go_binary")

# gazelle:prefix github.com/example/project
# gazelle:build_file_name BUILD,BUILD.bazel

go_library(
    name = "go_app_core",
    srcs = ["main.go"],
    deps = [
      ""
    ]
    importpath = "github.com/example/project",
    visibility = ["//visibility:public"],
)